--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "type": "module",
   "dependencies": {
+    "@sveltejs/adapter-node": "^1.0.0-next.55",
+    "marked": "^3.0.7",
     "remove-markdown": "^0.3.0"
   }
 }
