--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-node": "^1.0.0-next.55",
-		"@sveltejs/kit": "next",
+		"@sveltejs/kit": "^1.0.0-next.288",
 		"@types/ejs": "^3.1.0",
 		"@typescript-eslint/eslint-plugin": "^4.31.1",
 		"@typescript-eslint/parser": "^4.31.1",
@@ -25,7 +25,6 @@
 		"svelte": "^3.42.6",
 		"svelte-check": "^2.2.6",
 		"svelte-preprocess": "^4.9.4",
-		"tailwindcss": "^3.0.0-alpha.2",
 		"tslib": "^2.3.1",
 		"typescript": "^4.4.3"
 	},
