--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	"dependencies": {
 		"ejs": "^3.1.6",
 		"marked": "^4.0.12",
-		"remove-markdown": "^0.3.0"
+		"remove-markdown": "^0.3.0",
+		"svelte2tsx": "^0.5.5"
 	}
 }
