--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-VITE_CKAN_URL=https://data.stadt-zuerich.ch
+VITE_CKAN_URL=https://ckan-ogdzh.clients.liip.ch
+
 VITE_ANALYTICS_SRC=''
 VITE_ROBOTS_DIRECTIVE=noindex
 VITE_SCHEMA_ORG_PROFILE = 'stadtzh_schemaorg'
