--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,5 +18,6 @@ Build production image:
     - if: $CI_COMMIT_TAG
       variables:
         BUILD_IMAGE_TAG: $CI_COMMIT_TAG
+    - when: always
 
 
