--- a/.github/workflows/gitlab-sync.yml
+++ b/.github/workflows/gitlab-sync.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           args: "https://gitlab.liip.ch/ogdzh/ckan-frontend-ci"
         env:
-          FOLLOW_TAGS: "false"
+          FOLLOW_TAGS: "true"
           FORCE_PUSH: "false"
           GITLAB_HOSTNAME: "gitlab.liip.ch"
           GITLAB_USERNAME: ${{ secrets.GITLAB_USERNAME }}
