--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@ VITE_CKAN_URL=https://ckan-ogdzh.clients.liip.ch
 
 VITE_ANALYTICS_SRC=''
 VITE_ROBOTS_DIRECTIVE=noindex
-VITE_SCHEMA_ORG_PROFILE = 'stadtzh_schemaorg'
+VITE_SCHEMA_ORG_PROFILE='stadtzh_schemaorg'
