--- a/.github/workflows/gitlab-sync.yml
+++ b/.github/workflows/gitlab-sync.yml
@@ -1,7 +1,7 @@
 name: Mirror and run GitLab CI
 
 # Only run it on tags
-on: 
+on:
   push:
     tags:
       - '*'
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: Mirror + trigger CI
-        uses: SvanBoxel/gitlab-mirror-and-ci-action@master
+        uses: SvanBoxel/gitlab-mirror-and-ci-action@0.5
         with:
           args: "https://gitlab.liip.ch/ogdzh/ckan-frontend-ci"
         env:
