--- a/.github/workflows/gitlab-sync.yml
+++ b/.github/workflows/gitlab-sync.yml
@@ -14,12 +14,12 @@ jobs:
       - name: Mirror + trigger CI
         uses: SvanBoxel/gitlab-mirror-and-ci-action@0.5
         with:
-          args: "https://gitlab.liip.ch/ogdzh/ckan-frontend-ci"
+          args: 'https://gitlab.liip.ch/ogdzh/ckan-frontend-ci'
         env:
-          FOLLOW_TAGS: "true"
-          FORCE_PUSH: "false"
-          GITLAB_HOSTNAME: "gitlab.liip.ch"
+          FOLLOW_TAGS: 'true'
+          FORCE_PUSH: 'false'
+          GITLAB_HOSTNAME: 'gitlab.liip.ch'
           GITLAB_USERNAME: ${{ secrets.GITLAB_USERNAME }}
           GITLAB_PASSWORD: ${{ secrets.GITLAB_PASSWORD }}
-          GITLAB_PROJECT_ID: "3437"
+          GITLAB_PROJECT_ID: '3437'
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
