--- a/package.json
+++ b/package.json
@@ -7,33 +7,32 @@
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^1.0.0",
-		"@sveltejs/kit": "^1.0.0",
+		"@sveltejs/adapter-node": "^1.2.0",
+		"@sveltejs/kit": "^1.27.4",
 		"@types/ejs": "^3.1.2",
+		"@types/node": "^20.9.3",
 		"@types/remove-markdown": "^0.3.1",
-		"@typescript-eslint/eslint-plugin": "^5.45.0",
-		"@typescript-eslint/parser": "^5.45.0",
+		"@typescript-eslint/eslint-plugin": "^6.0.0",
+		"@typescript-eslint/parser": "^6.0.0",
 		"eslint": "^8.28.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte3": "^4.0.0",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
-		"svelte": "^3.54.0",
-		"svelte-check": "^2.9.2",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-svelte": "^2.30.0",
+		"prettier": "^3.1.0",
+		"prettier-plugin-svelte": "^3.1.1",
+		"svelte": "^4.2.7",
+		"svelte-check": "^3.6.0",
 		"tslib": "^2.4.1",
-		"typescript": "^4.9.3",
-		"vite": "^4.0.0"
+		"typescript": "^5.3.2",
+		"vite": "^4.5.0"
 	},
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-node": "^1.2.0",
-		"@types/marked": "^4.0.8",
 		"ejs": "^3.1.8",
-		"marked": "^4.0.12",
-		"remove-markdown": "^0.3.0"
+		"marked": "^10.0.0",
+		"remove-markdown": "^0.5.0"
 	}
 }
