feat: Use dynamic env vars instead of Vite vars set at build time

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-VITE_CKAN_URL=https://ckan-ogdzh.clients.liip.ch
+PUBLIC_CKAN_URL=https://ckan-ogdzh.clients.liip.ch
 
-VITE_ANALYTICS_SRC=''
-VITE_ROBOTS_DIRECTIVE=noindex
-VITE_SCHEMA_ORG_PROFILE='stadtzh_schemaorg'
+PUBLIC_ANALYTICS_SRC=''
+PUBLIC_ROBOTS_DIRECTIVE=noindex
+PUBLIC_SCHEMA_ORG_PROFILE='stadtzh_schemaorg'
