fix: Remove quote marks from env variables

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 PUBLIC_CKAN_URL=https://ckan-ogdzh.clients.liip.ch
 
-PUBLIC_ANALYTICS_SRC=''
+PUBLIC_ANALYTICS_SRC=
 PUBLIC_ROBOTS_DIRECTIVE=noindex
-PUBLIC_SCHEMA_ORG_PROFILE='stadtzh_schemaorg'
+PUBLIC_SCHEMA_ORG_PROFILE=stadtzh_schemaorg
