feat: Add survey link in logo header

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ PUBLIC_CKAN_URL=https://ckan-ogdzh.clients.liip.ch
 PUBLIC_ANALYTICS_SRC=
 PUBLIC_ROBOTS_DIRECTIVE=noindex
 PUBLIC_SCHEMA_ORG_PROFILE=stadtzh_schemaorg
+PUBLIC_SURVEY_LINK=http://example.org
