migrate: to new liipops container builder

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,18 +1,19 @@
 include:
   - component: $CI_SERVER_FQDN/components/containers-builder/build@0.7.2
+    inputs:
+      rules:
+        # If a tag is present use it instead of the commit sha
+        - if: $CI_COMMIT_TAG
+          variables:
+            BUILD_IMAGE_TAG: $CI_COMMIT_TAG
+        - when: always
+      image-name: ckan-frontend
+      image-tag: ${CI_COMMIT_SHORT_SHA}
 
 stages:
   - build
 
-Build production image:
-  stage: build
-  extends: .build-definition
-  variables:
-    BUILD_IMAGE_NAME: ckan-frontend
-    BUILD_IMAGE_TAG: ${CI_COMMIT_SHORT_SHA}
-  rules:
-    # If a tag is present use it instead of the commit sha
-    - if: $CI_COMMIT_TAG
-      variables:
-        BUILD_IMAGE_TAG: $CI_COMMIT_TAG
-    - when: always
+variables:
+  GIT_SUBMODULE_STRATEGY: normal
+  BUILD_IMAGE_NAME: ckan-frontend
+  BUILD_IMAGE_TAG: ${CI_COMMIT_SHORT_SHA}
